tests/negative_pomidory/two_actions.pomidor

*CLICK *click on #practice_menu_button
